fix assets loading

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="header">
-	<a href="{{ site.baseurl }}">
-		<img src="{{ "img/logo.png" | prepend: site.baseurl }}" alt="Logo">
+	<a href="/">
+		<img src="/img/logo.png" alt="Logo">
 	</a>
-	<h1>Bit Child</h1>
+	<h1>Firefly</h1>
 </header>
