--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,13 +7,13 @@
 	<title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 	<!-- CSS & fonts -->
-	<link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="/css/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900,400italic%7CSignika:700,300,400,600' rel='stylesheet' type='text/css'>
 
 	<!-- RSS -->
 	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 	
 	<!-- logo -->
-	<link rel="logo icon" href="/img/logo.png"> 
+	<link rel="logo icon" href="/img/logo.png">
 
 </head>
