--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <header id="header">
-	<a href="/">
-		<img src="/img/logo.png" alt="Logo">
-	</a>
-	<h1>Firefly</h1>
+	<pre style="font-weight: 700;">
+	_______           ________     
+   / ____(_)_______  / ____/ /_  __
+  / /_  / / ___/ _ \/ /_  / / / / /
+ / __/ / / /  /  __/ __/ / / /_/ / 
+/_/   /_/_/   \___/_/   /_/\__, /  
+                          /____/
+	</pre>
 </header>
